<resources>
    <string name="app_name">SSWW浪鲸</string>
    <string name="title_activity_login">Sign in</string>
    <string name="order_message">订单信息</string>
    <string name="me_info">我</string>
    <string name="my_work">工作台</string>
    <string name="my_message">消息</string>
    <string name="search">搜索</string>
    <string name="dispatch_order">配送订单</string>
    <string name="order_center">订单中心</string>
    <string name="prompt_email">登录账号</string>
    <string name="prompt_password">登录密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="copyright">版权所有copyright © 2014-2017佛山市捷特科技有限公司</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="user_def">
        <item>个人客户</item>
        <item>公司客户</item>
        <item>工程客户</item>
    </string-array>
    <string-array name="contact_array">
        <item>$^*张狗蛋</item>
        <item>000王二</item>
        <item>张三</item>
        
        <item>boy</item>
        <item>马蜂窝</item>
        <item>王了了</item>
        <item>李玖折</item>
        <item>胡三</item>
        <item>张政民</item>
        <item>陈九</item>
        <item>白玉芬</item>
        <item>仓春莲</item>
        <item>仓红</item>
        <item>陈超云</item>
        <item>陈高</item>
        <item>陈国祥</item>
        <item>陈小荣</item>
        <item>陈秀芬</item>
        <item>陈艳华</item>
        <item>陈兆国</item>
        <item>成秀山</item>
        <item>仇腊梅</item>
        <item>戴金辉</item>
        <item>邓海燕</item>
        <item>翟蕾</item>
        <item>丁德明</item>
        <item>丁素琴</item>
        <item>董荣柱</item>
        <item>范惠</item>
        <item>冯霞</item>
        <item>伏严成</item>
        <item>皋德华</item>
        <item>皋歌</item>
        <item>高艳</item>
        <item>顾其兰</item>
        <item>管小云</item>
        <item>何佳丽</item>
        <item>侯志玲</item>
        <item>黄慧</item>
        <item>黄伟</item>
        <item>惠志刚</item>
        <item>季赛花</item>
        <item>季铜然</item>
        <item>纪海燕</item>
        <item>蒋雯</item>
        <item>康海霞</item>
        <item>乐峰</item>
        <item>李金凤</item>
        <item>李军</item>
        <item>李晓慧</item>
        <item>刘琳</item>
        <item>马丽</item>
        <item>孟亚军</item>
        <item>明汉琴</item>
        <item>倪燕</item>
        <item>潘杰</item>
        <item>钱萍</item>
        <item>邱文干</item>
        <item>沈亚杰</item>
        <item>盛静</item>
        <item>施伟</item>
        <item>施志胜</item>
        <item>石磊</item>
        <item>时扬</item>
        <item>束长元</item>
        <item>宋欣</item>
        <item>孙新东</item>
        <item>孙正兰</item>
        <item>汤丽丽</item>
        <item>唐新胜</item>
        <item>陶椿燕</item>
        <item>陶晓雷</item>
        <item>王丹</item>
        <item>王霞</item>
        <item>王晓雷</item>
        <item>王雪梅</item>
        <item>吴长凤</item>
        <item>吴凤祥</item>
        <item>吴红兵</item>
        <item>吴华强</item>
        <item>吴萍</item>
        <item>夏祥</item>
        <item>肖丽丽</item>
        <item>谢莉萍</item>
        <item>谢艳</item>
        <item>徐海莲</item>
        <item>徐进</item>
        <item>徐丽云</item>
        <item>徐萍</item>
        <item>刘世佳</item>
    </string-array>
    <string-array name="mobile_array">
        <item>18019913883</item>
        <item>10086</item>
        <item>12306</item>
        
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
        <item>10086</item>
        <item>12306</item>
        <item>18019913333</item>
        <item>18715689899</item>
        <item>13877898980</item>
        <item>15678989098</item>
        <item>10000</item>
        <item>0557-3130999</item>
        <item>13907767890</item>
        <item>13978786823</item>
    </string-array>
</resources>